# Exercicios-Introdutorios-PUCRS-Politecnica

./: CMakeLists.txt  exercicio1.cpp  exercicio2.cpp  exercicio3.cpp  exercicio4.cpp  exercicio5.cpp
